pamc/src/tests/sample_code/should_fail/scope/unbindable_dot_lhs.ph
type Bool {
    .True: Bool,
    .False: Bool,
}

let x = match Bool.True { .True => Bool, .False => Bool }.True;
